src/test/deca/context/invalid/custom/undeclared-variable.deca
// Description:
//    utiliser un variable qui n a jamais ete declare.
//
// Resultats:
//    Ligne 12: b n a pas ete declare dans ce scope.
//
// Historique:
//    cree le 01/01/2022

{
    // ne doit pas complier.
    int a;
    a+b;
}
